<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hunting Partner</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="previousButton">&lt;</string>
    <string name="nextButton">&gt;</string>
    <string name="dateSelectButton">Select Date</string>
    <string name="sunsetTitle">Sunset</string>
    <string name="sunriseTitle">Sunrise</string>
    <string name="latTitle">Latitude:</string>
    <string name="lngTitle">Longitude:</string>
    <string name="location">Location</string>

</resources>
