<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".Hunting" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/previousButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/previousButton"
            android:textColor="@color/blaze_orange"
            android:onClick="previousDate"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/dateString"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text=""
            android:onClick="showDatePicker"
            android:clickable="true"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/nextButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/nextButton"
            android:textColor="@color/blaze_orange"
            android:onClick="nextDate"
            android:textSize="25sp" />

    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
    	<Button
            android:id="@+id/selectDateButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/dateSelectButton"
            android:textColor="@color/blaze_orange"
            android:background="@color/dark_grey"
            android:onClick="showDatePicker"
            android:textSize="25sp" />    
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

    	<TextView
    	    android:id="@+id/sunriseTitle"
    	    android:layout_width="fill_parent"
    	    android:layout_height="fill_parent"
    	    android:gravity="left"
    	    android:text="@string/sunriseTitle"
    	    android:textColor="@color/blaze_orange"
    	    android:textSize="30sp" />

    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/light_grey">

    	<TextView
    	    android:id="@+id/sunriseTime"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:background="@color/light_grey"
    	    android:gravity="left"
    	    android:paddingLeft="25dp"
    	    android:text="@string/sunriseTitle"
    	    android:textColor="@color/black"
    	    android:textSize="25sp" />

    	<TextView
    	    android:id="@+id/huntinStart"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:background="@color/light_grey"
    	    android:gravity="left"
    	    android:paddingLeft="25dp"
    	    android:text="@string/sunriseTitle"
    	    android:textColor="@color/green"
    	    android:textSize="25sp" />

    </LinearLayout>
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

    	<TextView
    	    android:id="@+id/sunsetTitle"
    	    android:layout_width="fill_parent"
    	    android:layout_height="fill_parent"
    	    android:gravity="right"
    	    android:text="@string/sunsetTitle"
    	    android:textColor="@color/blaze_orange"
    	    android:textSize="30sp" />

    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/light_grey">

    	<TextView
    	    android:id="@+id/sunsetTime"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:background="@color/light_grey"
    	    android:gravity="right"
    	    android:paddingRight="25dp"
    	    android:text="@string/sunriseTitle"
    	    android:textColor="@color/black"
    	    android:textSize="25sp" />

    	<TextView
    	    android:id="@+id/endHunting"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:background="@color/light_grey"
    	    android:gravity="right"
    	    android:paddingRight="25dp"
    	    android:text="@string/sunriseTitle"
    	    android:textColor="@color/red"
    	    android:textSize="25sp" />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

    	<TextView
    	    android:id="@+id/locationTitle"
    	    android:layout_width="fill_parent"
    	    android:layout_height="fill_parent"
    	    android:gravity="left"
    	    android:text="@string/location"
    	    android:textColor="@color/blaze_orange"
    	    android:textSize="20sp" />

    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/dark_grey"
        android:gravity="center">
    	<LinearLayout
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="horizontal"
    	    android:gravity="center">
	    	<TextView
	    	   	android:id="@+id/latTitle"
	    	   	android:layout_width="0dp"
	    	   	android:layout_weight="2"
	    	   	android:layout_height="wrap_content"
	    	   	android:textColor="@color/blaze_orange"
	    	   	android:text="@string/latTitle"
	    	   	android:textSize="20sp"
	    	   	android:gravity="right"
	    	/>
	    	<TextView
	    	   	android:id="@+id/latText"
	    	   	android:layout_width="0dp"
	    	   	android:layout_weight="3"
	    	   	android:layout_height="wrap_content"
	    	   	android:textColor="@color/blaze_orange"
	    	   	android:textSize="20sp"
	    	/>
	    </LinearLayout>
    	<LinearLayout
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="horizontal"
    	    android:gravity="center">
	    	<TextView
	    	   	android:id="@+id/lngTitle"
	    	   	android:layout_width="0dp"
	    	   	android:layout_weight="2"
	    	   	android:layout_height="wrap_content"
	    	   	android:textColor="@color/blaze_orange"
	    	   	android:text="@string/lngTitle"
	    	   	android:textSize="20sp"
	    	   	android:gravity="right"
	    	/>
	    	<TextView
	    	   	android:id="@+id/lngText"
	    	   	android:layout_width="0dp"
	    	   	android:layout_weight="3"
	    	   	android:layout_height="wrap_content"
	    	   	android:textColor="@color/blaze_orange"
	    	   	android:textSize="20sp"
	    	/>
	    </LinearLayout>
	</LinearLayout>
</LinearLayout>
